--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@
 #addBody{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    background-image: url("/media/webimage.jpg");
+    background-image: url("webimage.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
