--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    background-color: black;
 }
 
 header {
